added header and html structure basic as well as logo img

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Survey</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <title></title>
+  </head>
+  <body>
+<header>
+<img src="images/shiphero-logo-primary.png" alt="logo">
+</header>
+<main>
 
+</main>
+<footer>
+
+</footer>
+  </body>
+</html>
