defined divs for index html with survey themes and unified header and footer style in css file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 <img src="images/shiphero-logo-primary.png" alt="logo">
 </header>
 <main>
+<div class="satisfaction">
+
+</div>
+<div class="recomendations">
+
+</div>
+<div class="usability">
+
+</div>
+<div class="ratings">
+
+</div>
+<div class="userTasks">
+
+</div>
+<div class="productDescription">
+
+</div>
 
 </main>
 <footer>
