--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Survey</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title></title>
-  </head>
-  <body>
-<header>
-<img src="images/shiphero-logo-primary.png" alt="logo">
-</header>
-<main>
-  <!-- the whole survey questions are inside a form-->
-  <form class="formToBeFilled" action="" method="get">
-    <div class="satisfaction">
-      <label for="experience">How would you rate your experience so far using Shiphero?</label>
-          <input type="radio" id="expSelect1"
-           name="expSelect" value="bad">
-          <label for="expSelect1">Bad</label>
 
-          <input type="radio" id="expSelect2"
-           name="expSelect" value="notThatGood">
-          <label for="expSelect2">Not that good</label>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Survey</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title></title>
+</head>
 
-          <input type="radio" id="expSelect3"
-           name="expSelect" value="good">
-          <label for="expSelect3">Good!</label>
+<body>
+  <header>
+    <img src="images/shiphero-logo-primary.png" alt="logo">
+  </header>
+  <main>
+    <!-- the whole survey questions are inside a form-->
+    <form class="formToBeFilled" action="" method="get">
+      <div class="satisfaction">
+        <label for="experience">How would you rate your experience so far using Shiphero?</label>
+        <input type="radio" id="expSelect1" name="expSelect" value="bad">
+        <label for="expSelect1">Bad</label>
+        <input type="radio" id="expSelect2" name="expSelect" value="notThatGood">
+        <label for="expSelect2">Not that good</label>
+        <input type="radio" id="expSelect3" name="expSelect" value="good">
+        <label for="expSelect3">Good!</label>
+        <input type="radio" id="expSelect4" name="expSelect" value="good">
+        <label for="expSelect4">Excellent</label>
 
-          <input type="radio" id="expSelect4"
-           name="expSelect" value="good">
-          <label for="expSelect4">Excellent</label>
-        </div>
-    <div class="recomendations">
+        <label for="explSatisf">Can you explain the reasons behind your level of satisfaction?:</label>
+        <input type="text" id="explSatisf" name="explSatisf" required minlength="4" maxlength="500" size="10">
 
-    </div>
-    <div class="usability">
+      </div>
+      <div class="recomendations">
 
-    </div>
-    <div class="ratings">
+      </div>
+      <div class="usability">
 
-    </div>
-    <div class="userTasks">
+      </div>
+      <div class="ratings">
 
-    </div>
-    <div class="productDescription">
+      </div>
+      <div class="userTasks">
 
-    </div>
-  </form>
+      </div>
+      <div class="productDescription">
 
-</main>
-<footer>
+      </div>
+    </form>
 
-</footer>
-  </body>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
