--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="expSelect2">Not that good</label>
         <input type="radio" id="expSelect3" name="expSelect" value="good">
         <label for="expSelect3">Good!</label>
-        <input type="radio" id="expSelect4" name="expSelect" value="good">
+        <input type="radio" id="expSelect4" name="expSelect" value="excellent">
         <label for="expSelect4">Excellent</label>
 
         <label for="explSatisf">Can you explain the reasons behind your level of satisfaction?:</label>
@@ -33,7 +33,26 @@
 
       </div>
       <div class="recomendations">
+        <label for="experience">How likely is it that you would recommend Shiphero to a friend or colleague?</label>
+        <input type="radio" id="recSelect1" name="recSelect" value="Extremely unlikely">
+        <label for="recSelect1">Extremely unlikely</label>
+        <input type="radio" id="recSelect2" name="recSelect" value="Quite unlikely">
+        <label for="expSelect2">Quite unlikely</label>
+        <input type="radio" id="recSelect3" name="expSelect" value="Neither unlelikely nor likely">
+        <label for="recSelect3">Neither unlelikely nor likely</label>
+        <input type="radio" id="recSelect4" name="recSelect" value="Quite likely">
+        <label for="expSelect4">Quite likely</label>
+        <input type="radio" id="recSelect5" name="recSelect" value="Extremely likely">
+        <label for="expSelect5">Extremely likely</label>
 
+        <label for="experience">Have you recommended Shiphero to someone whitin the last 12 months?</label>
+        <input type="radio" id="recSelectTime" name="recSelectTime" value="Yes">
+        <label for="expSelectTime">Yes</label>
+        <input type="radio" id="recSelectTime" name="recSelectTime" value="No">
+        <label for="expSelectTime">No</label>
+
+        <label for="explRec">Who did you recommend Shiphero to, and why?:</label>
+        <input type="text" id="explRec" name="explRec" minlength="4" maxlength="500" size="10">
       </div>
       <div class="usability">
 
