Added font family from google fonts roboto and set height and width to text boxes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <title></title>
 </head>
 
@@ -56,27 +57,27 @@
       </div>
 
       <div class="usability">
-<!-- best way is to use a matrix ..got to research this a bit more -->
+        <!-- best way is to use a matrix ..got to research this a bit more -->
       </div>
       <div class="ratings">
-<!-- star rating for this one -->
+        <!-- star rating for this one -->
       </div>
       <div class="userTasks">
-<!-- define tasks to be rated -->
-<label for="experience">Overall, how did you find TASK1?</label><br>
-<input type="radio" id="taskSelect1" name="taskSelect" value="Very Difficult">
-<label for="taskSelect1">Very Difficult</label>
-<input type="radio" id="taskSelect2" name="taskSelect" value="Difficult">
-<label for="taskSelect2">Difficult</label>
-<input type="radio" id="taskSelect3" name="taskSelect" value="Not easy neither difficult">
-<label for="taskSelect3">Not easy neither difficult</label>
-<input type="radio" id="taskSelect4" name="taskSelect" value="Easy">
-<label for="taskSelect4">Easy</label>
-<input type="radio" id="taskSelect5" name="taskSelect" value="Very Easy">
-<label for="taskSelect5">Very Easy</label><br>
+        <!-- define tasks to be rated -->
+        <label for="experience">Overall, how did you find TASK1?</label><br>
+        <input type="radio" id="taskSelect1" name="taskSelect" value="Very Difficult">
+        <label for="taskSelect1">Very Difficult</label>
+        <input type="radio" id="taskSelect2" name="taskSelect" value="Difficult">
+        <label for="taskSelect2">Difficult</label>
+        <input type="radio" id="taskSelect3" name="taskSelect" value="Not easy neither difficult">
+        <label for="taskSelect3">Not easy neither difficult</label>
+        <input type="radio" id="taskSelect4" name="taskSelect" value="Easy">
+        <label for="taskSelect4">Easy</label>
+        <input type="radio" id="taskSelect5" name="taskSelect" value="Very Easy">
+        <label for="taskSelect5">Very Easy</label><br>
       </div>
       <div class="productDescription">
-<!-- Set a product reaction card -->
+        <!-- Set a product reaction card -->
       </div>
     </form>
 
