Added questions 1 til 6 html to move through the survey

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <label for="explSatisf">Can you explain the reasons behind your level of satisfaction?:</label><br>
         <input type="text" id="explSatisf" name="explSatisf" required minlength="4" maxlength="500" size="10">
 
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
+
       </div>
       <div class="recomendations">
         <label for="experience">How likely is it that you would recommend Shiphero to a friend or colleague?</label><br>
@@ -54,13 +57,20 @@
 
         <label for="explRec">Who did you recommend Shiphero to, and why?:</label><br>
         <input type="text" id="explRec" name="explRec" minlength="4" maxlength="500" size="10">
+
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
       </div>
 
       <div class="usability">
         <!-- best way is to use a matrix ..got to research this a bit more -->
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
       </div>
       <div class="ratings">
         <!-- star rating for this one -->
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
       </div>
       <div class="userTasks">
         <!-- define tasks to be rated -->
@@ -75,9 +85,13 @@
         <label for="taskSelect4">Easy</label>
         <input type="radio" id="taskSelect5" name="taskSelect" value="Very Easy">
         <label for="taskSelect5">Very Easy</label><br>
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
       </div>
       <div class="productDescription">
         <!-- Set a product reaction card -->
+        <a href="#" class="previous">&laquo; Previous</a>
+        <a href="#" class="next">Next &raquo;</a>
       </div>
     </form>
 
