added text to index html and counter to rest of survey pages

--- a/question3.html
+++ b/question3.html
@@ -7,7 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title></title>
 </head>
 
@@ -18,12 +18,13 @@
   <main>
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
-            <div class="usability">
+      <div class="usability">
+        <h5 id="questionCounter">Question 3 of 6</h5>
         <!-- best way is to use a matrix ..got to research this a bit more -->
         <a href="question2.html" class="previous">&laquo; Previous</a>
         <a href="question4.html" class="next">Next &raquo;</a>
       </div>
-        </form>
+    </form>
 
   </main>
   <footer>
