--- a/question5.html
+++ b/question5.html
@@ -7,7 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title></title>
 </head>
 
@@ -18,7 +18,8 @@
   <main>
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
-        <div class="userTasks">
+      <div class="userTasks">
+        <h5 id="questionCounter">Question 5 of 6</h5>
         <!-- define tasks to be rated -->
         <label for="experience">Overall, how did you find TASK1?</label><br>
         <input type="radio" id="taskSelect1" name="taskSelect" value="Very Difficult">
@@ -34,7 +35,7 @@
         <a href="question4.html" class="previous">&laquo; Previous</a>
         <a href="question6.html" class="next">Next &raquo;</a>
       </div>
-          </form>
+    </form>
 
   </main>
   <footer>
