--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title></title>
 </head>
 
@@ -19,7 +19,8 @@
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
       <div class="letsGetStarted">
-        <h1>Welcome to the Survey!</h1>
+        <h1>Welcome to our Survey!</h1>
+        <h5>By completing this survey you are helping us improve our service </h5>
         <a href="question1.html" class="next">Let's Start! &raquo;</a>
       </div>
     </form>
