--- a/question1.html
+++ b/question1.html
@@ -7,7 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title></title>
 </head>
 
@@ -19,6 +19,7 @@
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
       <div class="satisfaction">
+        <h5 id="questionCounter">Question 1 of 6</h5>
         <label for="experience">How would you rate your experience so far using Shiphero?</label><br>
         <input type="radio" id="expSelect1" name="expSelect" value="bad">
         <label for="expSelect1">Bad</label>
@@ -35,7 +36,7 @@
         <a href="question2.html" class="next">Next &raquo;</a>
 
       </div>
-          </form>
+    </form>
 
   </main>
   <footer>
