--- a/question2.html
+++ b/question2.html
@@ -7,7 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title></title>
 </head>
 
@@ -19,6 +19,7 @@
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
       <div class="recomendations">
+        <h5 id="questionCounter">Question 2 of 6</h5>
         <label for="experience">How likely is it that you would recommend Shiphero to a friend or colleague?</label><br>
         <input type="radio" id="recSelect1" name="recSelect" value="Extremely unlikely">
         <label for="recSelect1">Extremely unlikely</label>
