--- a/question6.html
+++ b/question6.html
@@ -7,8 +7,7 @@
   <title>Survey</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -19,6 +18,7 @@
     <!-- the whole survey questions are inside a form-->
     <form class="formToBeFilled" action="" method="get">
       <div class="productDescription">
+        <h5 id="questionCounter">Question 6 of 6</h5>
         <!-- Set a product reaction card -->
         <a href="question5.html" class="previous">&laquo; Previous</a>
         <a href="#" class="next">Submit</a>
