added the star rating to the question4 html file and some style to stars and title

--- a/question4.html
+++ b/question4.html
@@ -20,7 +20,15 @@
     <form class="formToBeFilled" action="" method="get">
       <div class="ratings">
         <h5 id="questionCounter">Question 4 of 6</h5>
-        <!-- star rating for this one -->
+        <!-- star rating for this one, must add js for clicking rating -->
+        <div id="stars">
+          <h6>Rate your experience using Shiphero so far:</h6><br>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+      </div>
         <a href="question3.html" class="previous">&laquo; Previous</a>
         <a href="question5.html" class="next">Next &raquo;</a>
       </div>
