added the product reaction card on question6

--- a/question6.html
+++ b/question6.html
@@ -20,6 +20,121 @@
       <div class="productDescription">
         <h5 id="questionCounter">Question 6 of 6</h5>
         <!-- Set a product reaction card -->
+<div class="tableCard">
+  <table>
+    <tr>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Comprehensive</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Optimistic</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Ucontrollable</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Unapprochable</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Responsive</span>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Attractive</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Essential</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Annoying</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Gets in the way</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Old</span>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Patronizing</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Undesirable</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Trustworthy</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Meaningful</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Simplistic</span>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Inconsistent</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Understandable</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Novel</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Relevant</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Stimulating</span>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Irrelevant</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Valuable</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Boring</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Useful</span>
+      </td>
+      <td>
+        <input type="checkbox">
+  <span class="checkmark">Overbearing</span>
+      </td>
+    </tr>
+  </table>
+</div>
+
         <a href="question5.html" class="previous">&laquo; Previous</a>
         <a href="#" class="next">Submit</a>
       </div>
