--- a/question6.html
+++ b/question6.html
@@ -21,6 +21,7 @@
         <h5 id="questionCounter">Question 6 of 6</h5>
         <!-- Set a product reaction card -->
 <div class="tableCard">
+  <h4>How would you describe your experience with Shiphero?</h4>
   <table>
     <tr>
       <td>
