added js for creting table in question6 based on an adjectives array

--- a/question6.html
+++ b/question6.html
@@ -22,7 +22,7 @@
         <!-- Set a product reaction card -->
 <div class="tableCard">
   <h4>How would you describe your experience with Shiphero?</h4>
-  <table>
+  <!-- <table>
     <tr>
       <td>
         <input type="checkbox">
@@ -132,7 +132,7 @@
   <span class="checkmark">Old</span>
       </td>
     </tr>
-  </table>
+  </table> -->
 </div>
 
         <a href="question5.html" class="previous">&laquo; Previous</a>
@@ -145,5 +145,5 @@
 
   </footer>
 </body>
-
+<script type="text/javascript" src="js/app.js"></script>
 </html>
