fixed bug in app js for rendering table in question6 html

--- a/question6.html
+++ b/question6.html
@@ -20,7 +20,7 @@
       <div class="productDescription">
         <h5 id="questionCounter">Question 6 of 6</h5>
         <!-- Set a product reaction card -->
-<div class="tableCard">
+<div id="tableCard" class="tableCard">
   <h4>How would you describe your experience with Shiphero?</h4>
   <!-- <table>
     <tr>
